# KronOS_template

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  Project_Specifications.md  README.md  pyproject.toml  roadmap.md
.github/workflows/: build.yml  deploy.yml  integration-tests.yml  test.yml
charts/kronos/: Chart.yaml  values-dev.yaml  values.yaml
charts/kronos/files/: provision_keycloak_org.sh
charts/kronos/templates/: _helpers.tpl  configmap.yaml  namespace.yaml  serviceaccount.yaml
docker/: .env.example  Dockerfile  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
docker/falco/: docker-compose.falco.yml  kronos_rules.yaml
docker/fluent-bit/: docker-compose.fluent-bit.yml  fluent-bit.conf
docker/kes/: docker-compose.kes.yml  kes-config.yml
docker/keycloak/: kronos-realm.json
docker/nginx/: nginx.conf
docker/pki/: bootstrap.sh  docker-compose.pki.yml  step-ca-config.json
docker/plaso/: Dockerfile  kronos-plaso-worker.py
docker/tusd/: tusd.yml
docker/vault/: docker-compose.vault.yml
docker/wazuh/: docker-compose.wazuh.yml
docker/wazuh/etc/: kronos-decoders.xml  kronos-rules.xml
docs/: IMPLEMENTATION_GUIDELINES.md  SECURITY_AUDIT.md  access-management-review.md  deployment.md  phase3-instructions.md
docs/runbooks/: siem-alert-response.md
docs/subsystems/: audit-log.md  evidence-intake.md  multi-tenancy.md  parsing.md  timeline-ingest.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  keycloak.ts  main.tsx
frontend/src/__tests__/: ErrorCatalogue.test.tsx  StatusPill.test.tsx
frontend/src/api/: admin.ts  cases.ts  client.ts  evidence.ts
frontend/src/components/: AuthGuard.tsx  ConfirmDialog.tsx  ErrorBanner.tsx  ErrorCatalogue.tsx  EvidenceDetailDrawer.tsx  Layout.tsx  RbacGuard.tsx  Spinner.tsx  StatusPill.tsx  UploadDrawer.tsx
frontend/src/hooks/: useEvidenceSSE.ts
frontend/src/pages/: AdminPage.tsx  CaseDetailPage.tsx  CasesPage.tsx  LoginPage.tsx
frontend/src/store/: auth.ts
frontend/src/types/: index.ts
frontend/src/utils/: parseTenantContext.ts
kronos_attest/: __init__.py  cli.py  report.py  tsa.py  verifier.py
reviews/: Part_1_Review.md  Part_2_Review.md  Part_3_Review.md  Part_4_Review.md  Part_5_Review.md  Part_6_Review.md
scripts/: provision_buckets.sh  provision_keycloak_org.sh  provision_wazuh.sh
src/: config.py  exceptions.py
src/adapter/opensearch/: __init__.py  client.py  (+2 more)
src/application/: audit_log.py  evidence_intake.py  hashing.py  parser_registry.py  parsing.py  parsing_orchestration.py  scanning.py  text_chunker.py  timeline_ingest.py  timeline_normalization.py  timestamping.py  validation.py
src/cli/: __init__.py  attest.py
src/domain/: audit.py  case.py  evidence.py  timeline.py  user.py
tests/: conftest.py
tests/fixtures/: factories.py
tests/integration/: conftest.py  test_auth_middleware.py  test_coverage_boost.py  test_evidence_intake.py  test_middleware_coverage.py  test_parser_coverage.py  test_parsing.py  test_timeline_ingest.py
tests/unit/: test_admin_routes.py  test_attest.py  test_audit_routes.py  test_cases_routes.py  test_kronos_attest.py  test_merkle.py  test_plaso_parser.py  test_sse_routes.py
(+61 files in other folders)
