[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kronos"
version = "0.1.0"
description = "Forensically sound, multi-tenant evidence management and forensic timeline analysis platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "celery>=5.4",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "boto3>=1.34",
    "aiobotocore>=2.13",
    "opensearch-py>=2.6",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "clamd>=1.0.2",
    "evtx>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "testcontainers[postgres,minio]>=4.5",
    "factory-boy>=3.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--cov=src", "--cov=kronos_attest", "--cov-report=term-missing", "--cov-fail-under=80"]
markers = [
    "integration: requires Docker (Postgres + MinIO containers)",
]

[tool.coverage.run]
omit = [
    "src/config.py",                              # pydantic-settings; needs real env vars
    "src/adapter/repository/postgres_*.py",       # infrastructure; covered by integration tests
    "src/adapter/storage/s3.py",                  # infrastructure; covered by integration tests
    "src/adapter/queue/celery_queue.py",          # infrastructure; needs real Celery broker
    "src/external/celery_app.py",                 # infrastructure; needs real Celery broker
    "src/cli/attest.py",                          # standalone CLI; needs real DB+MinIO; integration-tested
    "src/external/middleware/keycloak_auth.py",   # needs live Keycloak JWKS endpoint
    "src/external/middleware/opensearch_isolation.py",  # covered by integration tests
    "src/external/middleware/query_isolation.py",       # covered by integration tests
    "src/external/parsers/evtx.py",                    # needs evtx binary + real EVTX files
    "src/external/parsers/plaso.py",                   # needs Plaso installed in Firecracker container
    "src/external/sandbox/firecracker.py",             # needs subprocess + plaso worker binary
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# Pydantic v2 BaseModel subclassing is not understood by mypy 2.x without the
# plugin (pydantic.mypy is incompatible with mypy 2.x). Suppress [misc] in
# model-heavy files to avoid noise.
[[tool.mypy.overrides]]
module = [
    "src.domain.*",
    "src.external.routes.*",
    "src.external.fastapi_app",
    "src.config",
]
disable_error_code = ["misc", "no-any-return", "untyped-decorator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]

[tool.black]
line-length = 100
target-version = ["py311"]

[project.scripts]
kronos-attest = "kronos_attest.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src", "kronos_attest"]
